# python_exercises

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
advanced_topics/: closures.py  closures_and_decorators.py  comprehension.py  context1_managers.py  context_managers.py  context_managers_custom.py  decorators1.py  decorators2.py  decorators2_c_style_accessors.py  decorators3.py  decorators3_retries_case.py  decorators4_class_methods.py  decorators5_class_decorators.py  encapsulation.py  functools.py  generators.py  hello_world.txt  itertools_all_iters.py  itertools_combinatoric.py  itertools_iters.py  keyword_args.py  lambdas.py  map_function.py
advanced_topics/concurrency/: concurrent.features.py  synchronization.py  syncro_comm.py  thread_safety.py  threading_use_case_1.py  use_case_with_async.py  use_case_without_async.py
advanced_topics/flask_examples/: main.py
advanced_topics/graphql/: book_resolver.py  schema.py  user_schema.py
advanced_topics/graphql1/: book_resolver.py  book_schema.py  book_type.py  clients.py  server.py  user_schema.py
advanced_topics/meta_programming/: metaclasses.py
algos/: BreadthFirstSearch.py
concurrency/: asyncio_use_case.py  normal_use_case.py  threading_use_case_1.py
data_structures/: CustomLinkedList.py
design_patterns/: factory.py  singleton.py
design_patterns/observer/: Observer.py  (+2 more)
exercises/: even_odds.py  freq_count.py  longest_increasing_subsequence.py
fastapi_examples/: main.py
intermediate_topics/: collections.py
parallel_processing/: multiprocessing_use_case.py
tests/: __init__.py
(+62 files in other folders)
