[project]
name = "python-exercises"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo Zamora"}
]
license = {text = "Apache license 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types (==0.6.0)",
    "anyio (==3.7.1)",
    "asn1crypto (==1.5.1)",
    "fastapi (==0.103.2)",
    "greenlet (==3.0.0)",
    "idna (==3.4)",
    "pg8000 (==1.30.2)",
    "pydantic (==2.4.2)",
    "pydantic-core (==2.10.1)",
    "python-dateutil (==2.8.2)",
    "scramp (==1.4.4)",
    "six (==1.16.0)",
    "sniffio (==1.3.0)",
    "sqlalchemy (==2.0.21)",
    "starlette (==0.27.0)",
    "testing-common-database (==2.0.3)",
    "testing-postgresql (==1.3.0)",
    "typing-extensions (==4.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
